feat: schedule eventapi
