# worker/handlers.go
@@ -5,6 +5,7 @@ import (
 	"encoding/json"
 	"fmt"
 	"log"
+	"time"
 
 	"github.com/hibiken/asynq"
 	"github.com/musthafa-vakkayil/event_scheduler_v2/tasks"
@@ -13,6 +14,10 @@ import (
 // LogPayload struct
 type LogPayload struct {
 	LogID int `json:"log_id"`
+}
+
+type EventPayload struct {
+	EventID int64 `json:"event_id"`
 }
 
 // ArchiveLogHandler processes the archive task
@@ -65,5 +70,57 @@ func (w *Worker) DeleteLogHandler(ctx context.Context, t *asynq.Task) error {
 	}
 
 	log.Printf("✔️ Deleted log ID: %d", payload.LogID)
+	return nil
+}
+
+// ScheduleEventHandler processes the schedule event task
+func (w *Worker) ScheduleEventHandler(ctx context.Context, t *asynq.Task) error {
+	var payload EventPayload
+	if err := json.Unmarshal(t.Payload(), &payload); err != nil {
+		return fmt.Errorf("failed to unmarshal payload: %v", err)
+	}
+
+	log.Printf("✅ Executing event id: %d", payload.EventID)
+
+	// Get the event from the DB
+	event, err := w.Repo.GetEvent(int(payload.EventID))
+	if err != nil {
+		return fmt.Errorf("failed to get event %d: %v", payload.EventID, err)
+	}
+
+	// Execute the event
+	logId, err := w.Repo.ExecuteEvent(event.CreatedBy, event.ID, "SCHEDULED_EVENT", "SUCCESS", event.ApiRequestBody)
+	if err != nil {
+		return fmt.Errorf("failed to execute event %d: %v", payload.EventID, err)
+	}
+
+	// Create an archive task
+	archiveTask, err := tasks.NewArchiveLogTask(int(logId))
+	if err != nil {
+		return fmt.Errorf("failed to create archive task:%v", err)
+	}
+
+	// Enqueue the archive task with a 2-minute delay (for testing)
+	_, err = w.RedisClient.Enqueue(archiveTask, asynq.Queue("low"), asynq.ProcessIn(w.Config.LogArchiveDuration))
+	if err != nil {
+		return fmt.Errorf("failed to enqueue archive task:%v", err)
+	}
+
+	if event.IsRecurring {
+		// Create a new schedule event task
+		scheduleEventTask, err := tasks.NewScheduleEventTask(event.ID)
+		if err != nil {
+			return fmt.Errorf("failed to create schedule event task:%v", err)
+		}
+
+		// Enqueue the schedule event task with a delay
+		_, err = w.RedisClient.Enqueue(scheduleEventTask, asynq.Queue("critical"), asynq.ProcessAt(time.Now().Add(time.Duration(event.Interval)*time.Minute)))
+		if err != nil {
+			return fmt.Errorf("failed to enqueue schedule event task:%v", err)
+		}
+
+		log.Printf("✔️ Scheduled Event ID for Recurring: %d", payload.EventID)
+	}
+
 	return nil
 }
